--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Montserrat', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.1em;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+:root{
+  --blue: #354259;
+  --brown: #CDC2AE;
+  --yellow: #ECE5C7;
+  --light-blue: #7EE8FA;
+  --green: #0BAB64;
+  --light-green: #3BB78F;
+}
+.button{
+  width: 6.5em;
+  border: none;
+  padding: 0.5em;
+  border-radius: 5px;
+  font-size: 1.1em;
+}
+.bg-green-gradient{
+  background-image: linear-gradient(to right, var(--green), var(--light-green));
+}
+.bg-blue-gradient{
+  background-image: linear-gradient(to right, #4884EE, #06BCFB);
 }
