--- a/src/components/AdminSections/CategoryForm.css
+++ b/src/components/AdminSections/CategoryForm.css
@@ -1,3 +1,8 @@
+.cat-container{
+  position: relative;
+  width: 50vw;
+  padding: 1em;
+}
 .category-box{
   background-image: linear-gradient(to right, #FFDD00, #FBB034);
   display: flex;
@@ -8,14 +13,29 @@
 }
 .edit-button{
   position: absolute;
+  bottom: 15%;
   display: none;
 }
 .edit-button button{
   padding: 5px 10px;
   border: none;
   border-radius: 10px;
+  font-size: 0.8em;
 }
-.category-box:hover .edit-button{
+.delete-button{
+  position: absolute;
+  top: 15%;
+  display: none;
+}
+
+.delete-button button{
+  padding: 5px 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 0.8em;
+  background-color: red;
+}
+.category-box:hover .edit-button, .category-box:hover .delete-button{
   display: block;
 }
 .form-edit-category{
@@ -32,4 +52,25 @@
 }
 .form-edit-category input:focus{
   box-shadow: 1px 1px 2px #4fd3ff, 1px 1px 2px #4fd3ff inset;
+}
+
+@media (max-width: 576px){
+  .cat-container{
+    width: 90vw;
+  }
+}
+@media (max-width: 768px){
+  .cat-container{
+    width: 80vw;
+  }
+}
+@media (max-width: 992px){
+  .cat-container{
+    width: 70vw;
+  }
+}
+@media (max-width: 1200px){
+  .cat-container{
+    width: 60vw;
+  }
 }
