--- a/src/components/AdminSections/ProductForm.css
+++ b/src/components/AdminSections/ProductForm.css
@@ -1,7 +1,8 @@
 .form-container{
-  padding: 10px;
+  margin: 1em;
   z-index: 10;
   position: relative;
+  width: 50vw;
 }
 .form-container h3{
   color: black;
@@ -30,8 +31,8 @@
 }
 .close-icon{
   position: absolute;
-  top: 1%;
-  right: 1%;
+  top: 0;
+  right: 0;
   font-size: 2em;
   color: black;
 }
@@ -41,4 +42,28 @@
 .form-comment{
   font-size: 0.8em;
   color: rgb(49, 49, 49);
+}
+.validation-text{
+  color: red;
+  font-size: 0.8em;
+}
+@media (max-width: 576px){
+  .form-container{
+    width: 90vw;
+  }
+}
+@media (max-width: 768px){
+  .form-container{
+    width: 80vw;
+  }
+}
+@media (max-width: 992px){
+  .form-container{
+    width: 70vw;
+  }
+}
+@media (max-width: 1200px){
+  .form-container{
+    width: 60vw;
+  }
 }
