--- a/src/components/ChartDesign.css
+++ b/src/components/ChartDesign.css
@@ -2,7 +2,7 @@
   height: 60vh;
   margin-top: 2em;
 }
-.row-height .col-6{
+.row-height  .bg-image{
   background-size: cover;
 }
 .section-container{
@@ -13,6 +13,7 @@
   border: 3px solid rgb(255, 255, 255);
   margin: 0;
   padding: 0;
+  background-size: cover;
 }
 .shadow-container h2{
   font-weight: 700;
